# mcp-course

./: .gitignore  README.md  curriculum.csv  curriculum.md  curriculum.tsv
lectures/: ep00-intro-sample.md
lectures/module-a/: ep01-what-is-mcp.md  ep02-architecture.md  ep03-first-server.md
project/: .env.example  pyproject.toml
project/.github/workflows/: test.yml
project/data/: inventory.csv
project/data/policies/: expense-policy.md  onboarding-checklist.md  remote-work.md
project/data/tickets/: tickets.jsonl
project/src/: audit.py  models.py  server.py  validation.py
project/src/prompts/: templates.py
project/src/resources/: policy.py
project/src/tools/: create_ticket.py  lookup_inventory.py  search_policy.py
project/tests/: conftest.py  test_audit.py  test_integration.py  test_inventory.py  test_policy.py  test_ticket.py  test_validation.py
project/ui/: app.py  mcp_client.py
slides/: ep00-intro-slides.md
starter-kit/: .env.example  pyproject.toml
starter-kit/data/policies/: expense-policy.md  onboarding-checklist.md  remote-work.md  security-policy.md  vpn-guide.md  vpn-setup.md
starter-kit/data/tickets/: tickets.jsonl
starter-kit/src/: audit.py  models.py  server.py  validation.py
starter-kit/src/prompts/: templates.py
starter-kit/src/resources/: policy.py
starter-kit/src/tools/: create_ticket.py  lookup_inventory.py  search_policy.py
starter-kit/tests/: conftest.py  test_audit.py  test_integration.py  test_inventory.py  test_policy.py  test_validation.py
starter-kit/ui/: __init__.py  app.py
(+51 files in other folders)
