[project]
name = "internal-ops-assistant"
version = "0.1.0"
description = "MCP-based Internal Ops Assistant — Starter Kit"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "gradio>=5.0",
]

[project.scripts]
ops-assistant = "src.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
